# MultiMonitorTools

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: downloadQt.cmake
src/: MMT.cpp  MMT.hpp  MMT.rc  MMTCursorAdjust.cpp  MMTCursorAdjust.hpp  MMTHotkeyEditor.cpp  MMTHotkeyEditor.hpp  MMTHotkeys.cpp  MMTHotkeys.hpp  MMTKeyboardHook.cpp  MMTKeyboardHook.hpp  MMTMainWindow.cpp  MMTMainWindow.hpp  MMTMonitorConfigWidget.cpp  MMTMonitorConfigWidget.hpp  MMTMonitorLayoutEditor.cpp  MMTMonitorLayoutEditor.hpp  MMTMonitorManager.cpp  MMTMonitorManager.hpp  MMTScreenOverlay.cpp  MMTScreenOverlay.hpp  MMTSettings.cpp  MMTSettings.hpp  MMTTrayIconManager.cpp  MMTTrayIconManager.hpp  MMTVirtualDesktop.cpp  MMTVirtualDesktop.hpp  MultiMonitorTools.qrc  VirtualDesktopGlobals.hpp  VirtualDesktopInterface.cpp  VirtualDesktopInterface.hpp  VirtualDesktop_Win11_23.hpp  VirtualDesktop_Win11_23H2.hpp  main.cpp
